<resources>
    <string name="app_name">MessengerFirebase</string>
    <string name="messenger">Messenger</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="login">Login</string>
    <string name="forgot_password">Forgot password</string>
    <string name="register">Register</string>
    <string name="name">Name</string>
    <string name="last_name">Last name</string>
    <string name="sign_up">Sign up</string>
    <string name="age">Age</string>
    <string name="registration">Registration</string>
    <string name="email_">Email</string>
    <string name="forgot_password_title">Forgot password</string>
    <string name="your_email">Your email</string>
    <string name="reset_password">Reset password</string>
    <string name="log_out">Log out</string>
    <string name="reset_password_link_send">Reset password link send</string>
</resources>